fixed button on dark mode and nav logo

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -64,6 +64,10 @@
         color: var(--color-dark);
       }
     }
+
+    .brutal-btn {
+        color: var(--color-dark);
+    }
   }
 }
   
